--- a/BookUserRegistration/src/main/resources/application.properties
+++ b/BookUserRegistration/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/UserBookRegistration?createDatabaseIfNotExist=true
-spring.datasource.username=siva
-spring.datasource.password=siva
+spring.datasource.username=${Username}
+spring.datasource.password=${Password}
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.application.name=currency-exchange-service
